--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   flutter_native_splash: ^2.4.4
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
